cabal-version: 3.0
name: Brainfuck-interpreter
version: 0.1.0.0
description: Brainfuck interpreter
build-type: Simple

library
    hs-source-dirs: src
    exposed-modules: Brainfuck
                   , Examples
    build-depends: base >= 4.7 && < 5
                 , bytestring
    default-language: Haskell2010